# NoteNinja

./: pyproject.toml
notes/noteapp/: admin.py  forms.py  models.py  urls.py  views.py
notes/noteapp/migrations/: 0001_initial.py  0002_note_user_tag_user_alter_tag_name_and_more.py
notes/noteapp/templates/noteapp/: base.html  detail.html  index.html  note.html  tag.html
notes/notes/: settings.py  urls.py
notes/users/: forms.py  models.py  urls.py  views.py
notes/users/migrations/: 0001_initial.py  0002_alter_profile_avatar.py
notes/users/templates/users/: login.html  profile.html  signup.html
